--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+       android:id="@+id/fab"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentRight="true"
+
+       android:layout_alignParentBottom="true"
+       android:layout_marginStart="40dp"
+       android:layout_marginTop="40dp"
+       android:layout_marginEnd="40dp"
+       android:layout_marginBottom="40dp"
+       android:backgroundTint="@color/lavender"
+       android:src="@drawable/ic_baseline_add_24"
+       android:tint="@color/white" />
+
+</RelativeLayout>
