--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+   <androidx.recyclerview.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+      android:id="@+id/recycleView"
+      android:scrollbars="vertical"
+      android:layout_marginTop="20dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
 
        android:id="@+id/fab"
